@@ -261,6 +261,10 @@ Core and Builtins
 Library
 -------
 
+- Issue #5084: unpickling now interns the attribute names of pickled objects,
+  saving memory and avoiding growth in size of subsequent pickles. Proposal
+  and original patch by Jake McGuire.
+
 - Issue #3002: ``shutil.copyfile()`` and ``shutil.copytree()`` now raise an
   error when a named pipe is encountered, rather than blocking infinitely.
 
